<resources>
    <string name="app_name">Eva</string>
    <string name="please_wait">Please Wait....</string>
    <string name="error_message">OOPS! Something went wrong. Please try again</string>
    <string name="permission_alert">You need to allow access to this permissions</string>
    <string name="splash_redefining">Redefining the shopping experience</string>
    <string name="powered_by">POWERED BY</string>
    <string name="action_search">Search</string>
    <string name="facebook_app_id">1958863914439168</string>
    <string name="title_profile">Profile</string>


    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Profile</item>
        <item>Hot Deals</item>
        <item>Favorite</item>
        <item>Discover</item>
        <item>Tell a Friend</item>
        <item>Privacy Policy</item>
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ok">OK</string>
    <string name="title_beacons">Beacons</string>
    <string name="google_maps_key">AIzaSyBr4baNGUf93MWF1r9vljfk9JNVOCPqodU</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile no</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="facebook_login">FB Login</string>
    <string name="facebook_logout">FB Logout</string>
    <string name="twitter_consumer_key" translatable="false">9w1ML1yDH5xSSu8bGUSI7Wocp</string>
    <string name="twitter_consumer_secret" translatable="false">u2Jlt4rOiz10iBbmHj6GNdzhSh7v5aqLS9JgreCaaxCBCnzD5C</string>
    <string name="twitter_logout">Twitter Logout</string>
</resources>
