<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingTop="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_20"
            android:layout_margin="@dimen/padding_10"
            android:gravity="center_horizontal"
            android:fontFamily="@font/comic_sans_ms_bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/splash_redefining"
            android:textColor="@color/dark_grey"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/padding_10"
            android:src="@drawable/eva_fire" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="-30dp"
            android:padding="@dimen/padding_5"
            android:src="@drawable/eva" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginStart="@dimen/padding_10"
            android:layout_marginTop="@dimen/padding_10"
            android:fontFamily="@font/permanentmarker"
            android:text="@string/powered_by"
            android:textColor="@color/dark_grey"
            android:textStyle="normal"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/padding_40"
            android:layout_marginRight="@dimen/padding_40"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_3psoft" />

    </LinearLayout>


</LinearLayout>